--- a/perfil/styles.css
+++ b/perfil/styles.css
@@ -34,9 +34,9 @@ body {
 main {
   display: grid;
   grid-template-columns: 100%;
-  grid-template-rows: 15vh repeat(3, 1fr) 10vh;
+  grid-template-rows: 13vh repeat(3, 1fr) 10vh;
   width: 100%;
-  height: 90vh;
+  height: 95vh;
   min-width: 650px;
   max-width: 55vw;
   border-radius: 0.5rem;
@@ -45,15 +45,15 @@ main {
 }
 main > * {
   width: 100%;
-  height: auto;
+  height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  padding: 1.5rem calc(2rem + 5vw);
+  padding: 1.5rem 4vw;
   gap: 1rem;
 }
 h1 {
-  font-size: 3.25rem;
+  font-size: 3rem;
   color: var(--cl-black);
 }
 h2 {
@@ -64,28 +64,27 @@ h2 {
   margin-bottom: 0.25rem;
 }
 form {
-  display: flex;
-  flex-direction: column;
+  background-color: var(--cl-green-2);
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: 1fr auto;
   height: 100%;
-  padding-inline: 0.5rem;
-
-  border-inline: 4px solid var(--cl-white);
+  padding: 1rem;
+  gap: 1rem;
+  box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.25);
   border-radius: 0.1rem;
 }
 label {
   color: var(--cl-red);
-  margin-bottom: 0.25rem;
 }
 textarea,
 input {
   font-size: 1.1rem;
-  margin-bottom: 1rem;
   padding: 0.25rem 0.5rem;
   border: 2px solid var(--cl-red);
   border-radius: 0.25rem;
   outline: none;
-  max-width: 25vw;
-  min-width: 240px;
+  max-width: 100%;
 }
 textarea:focus,
 input:not([type="submit"]):focus {
@@ -109,13 +108,20 @@ input[type="submit"]:active {
 }
 a {
   text-decoration: none;
-  font-size: 1.4rem;
+  font-size: 1.2rem;
   display: flex;
   align-items: center;
   gap: 0.5rem;
 }
 i {
-  font-size: 2rem;
+  font-size: 1.7rem;
+}
+p {
+  text-align: justify;
+  font-size: 1rem;
+}
+li {
+  padding: 0 0 0.25rem 0.5rem;
 }
 
 span a {
@@ -130,16 +136,16 @@ span:hover a {
 
 /* Contenedor de la primera seccion */
 .cont-nombre-img {
-  align-self: center;
   flex-direction: row;
+  justify-content: space-between;
+  align-items: center;
   background-color: var(--cl-red);
+  padding-block: 0;
 }
 .cont-nombre-img > .cont-img {
-  min-width: 150px;
-  width: 100%;
-  max-width: 175px;
-  height: 150px;
-  border-radius: 20%;
+  width: 125px;
+  height: 125px;
+  border-radius: 10%;
   background-color: var(--cl-pink);
   display: flex;
   align-items: center;
@@ -166,23 +172,61 @@ span:hover a {
 .cont-user-info {
   background-color: var(--cl-green-2);
 }
-.cont-user-info > p {
-  text-align: justify;
-  font-size: 1.2rem;
-}
-/* Contenedor de la tercera seccion (formulario) */
-.cont-contacto {
+
+/* Contenedor de la tercera seccion (educaion experiencia) */
+.cont-edu-exp {
   background-color: var(--cl-pink);
+  flex-direction: row;
+}
+.cont-edu-exp > .educacion,
+.cont-edu-exp > .experiencia {
+  width: 100%;
+}
+.list-educacion > ul {
+  list-style: none;
+  padding-left: 0;
+}
+.list-educacion > ul > li {
+  display: flex; /* Cambiamos a flex para alinear verticalemente */
+  align-tracks: baseline; /*  Alinea verticalmente con la línea base */
+}
+.list-educacion > ul > li::before {
+  content: "-";
+  margin-right: 0.5rem;
+}
+.fecha {
+  font-weight: bold;
+  font-style: italic;
+  padding: 0.5rem;
+}
+
+/* Contenedor de la cuarta seccion (formulario) */
+.cont-contacto {
+  background-color: whitesmoke;
   align-items: center;
   justify-content: center;
   gap: 2.5vw;
 }
 .cont-contacto > .cont-contacto-form {
-  width: 50%;
+  width: 100%;
   display: flex;
   flex-direction: column;
   gap: 1rem;
-  box-sizing: border-box;
+}
+form > div {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  padding-block: 0.5rem;
+}
+form > div:first-child {
+  grid-area: 1 / 1 / 2 / 2;
+}
+form > div:nth-child(2) {
+  grid-area: 1 / 2 / 2 / 3;
+}
+form > div:nth-child(3) {
+  grid-area: 2 / 1 / 3 / 3;
 }
 
 /* Contenedor de la ultima seccion */
